@@ -1,9 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
+        android:id="@+id/download"
+        android:title="@string/download"
+        android:showAsAction="always"
+        android:icon="@drawable/ic_action_download"
+        />
+    <item
 		android:id="@+id/chooseStation"
 		android:title="@string/chooseStation"
-		android:showAsAction="always|withText"
+		android:showAsAction="never"
+		android:icon="@drawable/ic_action_choose_station"
 		/>
 	<item
 		android:id="@+id/login"
